GMM: task-1: small cosmetic improvements

--- a/GMM/task-1/solution.ipynb
+++ b/GMM/task-1/solution.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Task 1 - implement pretrained model + data loader\n",
+    "\n",
+    "### Pre-implementation notes:\n",
+    "\n",
     "**Steps**\n",
     "- Select an image classification problem and a pre-trained model.\n",
     "- Select testing dataset\n",
@@ -374,21 +377,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-18  19:14:31 WARNING Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+      "2024-02-18  21:44:17 WARNING Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "class:  CAT\n",
+      "class: CAT\n",
       "richard-3.jpg\n"
      ]
     },
@@ -405,7 +408,7 @@
    ],
    "source": [
     "def test_your_image(your_image_name):\n",
-    "    image = io.imread(\"./your_images/\" + your_image_name)\n",
+    "    image = io.imread(\"./your-images/\" + your_image_name)\n",
     "    image = model_manager.extract_features(image)\n",
     "\n",
     "    prediction = model_manager.predict(image)\n",
@@ -476,61 +479,27 @@
    "metadata": {},
    "source": [
     "## Model Metrics\n",
-    "Metrics are based on 999 images from **openimages**. Please note, that one class that the model predicts `cow` is missing from the test data set. Therefore, the average precision is slightly higher than recall.\n",
+    "Metrics are based on 999 images from **openimages**. Please note, that class `cow` is missing from the test data set. Therefore, the average precision is slightly higher than recall.\n",
     "\n",
-    "### Overall Average\n",
-    "- **Precision: 0.897**\n",
-    "- **Recall: 0.888**\n",
-    "- **F1 score: 0.888**\n",
+    "### **Overall**\n",
+    "- Accuracy: **0.89**\n",
+    "- Precision: **0.897**\n",
+    "- Recall: **0.888**\n",
+    "- F1 score: **0.888**\n",
     "\n",
+    "#### Scores Per Class\n",
     "\n",
-    "### Class: DOG\n",
-    "- Precision: 0.70\n",
-    "- Recall: 0.83\n",
-    "- F1 Score: 0.76\n",
-    "\n",
-    "### Class: CAT\n",
-    "- Precision: 0.92\n",
-    "- Recall: 0.65\n",
-    "- F1 Score: 0.76\n",
-    "\n",
-    "### Class: BUTTERFLY\n",
-    "- Precision: 0.89\n",
-    "- Recall: 0.92\n",
-    "- F1 Score: 0.91\n",
-    "\n",
-    "### Class: CHICKEN\n",
-    "- Precision: 0.93\n",
-    "- Recall: 0.85\n",
-    "- F1 Score: 0.89\n",
-    "\n",
-    "### Class: ELEPHANT\n",
-    "- Precision: 0.97\n",
-    "- Recall: 0.95\n",
-    "- F1 Score: 0.96\n",
-    "\n",
-    "### Class: HORSE\n",
-    "- Precision: 0.87\n",
-    "- Recall: 0.92\n",
-    "- F1 Score: 0.89\n",
-    "\n",
-    "### Class: SHEEP\n",
-    "- Precision: 0.89\n",
-    "- Recall: 0.98\n",
-    "- F1 Score: 0.94\n",
-    "\n",
-    "### Class: SPIDER\n",
-    "- Precision: 0.96\n",
-    "- Recall: 0.96\n",
-    "- F1 Score: 0.96\n",
-    "\n",
-    "### Class: SQUIRREL\n",
-    "- Precision: 0.94\n",
-    "- Recall: 0.93\n",
-    "- F1 Score: 0.93\n",
-    "\n",
-    "### Overall Accuracy\n",
-    "- Accuracy: 0.89\n"
+    "| Class     | Precision | Recall | F1 Score |\n",
+    "|-----------|:---------:|:------:|:--------:|\n",
+    "| DOG       |   0.70    |  0.83  |   0.76   |\n",
+    "| CAT       |   0.92    |  0.65  |   0.76   |\n",
+    "| BUTTERFLY |   0.89    |  0.92  |   0.91   |\n",
+    "| CHICKEN   |   0.93    |  0.85  |   0.89   |\n",
+    "| ELEPHANT  |   0.97    |  0.95  |   0.96   |\n",
+    "| HORSE     |   0.87    |  0.92  |   0.89   |\n",
+    "| SHEEP     |   0.89    |  0.98  |   0.94   |\n",
+    "| SPIDER    |   0.96    |  0.96  |   0.96   |\n",
+    "| SQUIRREL  |   0.94    |  0.93  |   0.93   |"
    ]
   }
  ],
